--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# IGNORE LISTINGS SPECIFIC TO THIS MSPA PROJECT
+/data/brfss-xpts/
+/data/brfss-csvs/
+/data/brfss-zips/
+
+.DS_Store
+
+# STANDARD R IGNORE FILES
 # History files
 .Rhistory
 .Rapp.history
